--- a/app/index.html
+++ b/app/index.html
@@ -18,22 +18,58 @@
 </head>
 <body>
 	<div class="wrapper">		
-		<div class="col-mnu nopadding">
-			<a href="" class="logo"><img src="img/logo.png" alt=""></a>
-			<div class="toggle-mnu-wrap">
-				<a href="#" class="toggle-mnu"><span></span></a>
+		<div class="top">
+			<div class="col-mnu nopadding">
+				<a href="" class="logo"><img src="img/logo.png" alt=""></a>
+				<div class="toggle-mnu-wrap">
+					<a href="#" class="toggle-mnu"><span></span></a>
+				</div>
+				<div class="top_mnu main-mnu">
+					<ul>
+						<li class="active"><a href="#">Санкт-Петербург</a></li>
+						<li><a href="#">Екатеринбург</a></li>
+						<li><a href="#">Зарубежные туры</a></li>
+						<li><a href="#">Российские туры</a></li>
+						<li><a href="#">Доп. услуги</a></li>
+						<li><a href="#">О нас</a></li>							
+					</ul>
+				</div>
 			</div>
-			<div class="top_mnu main-mnu">
-				<ul>
-					<li class="active"><a href="#">Санкт-Петербург</a></li>
-					<li><a href="#">Екатеринбург</a></li>
-					<li><a href="#">Зарубежные туры</a></li>
-					<li><a href="#">Российские туры</a></li>
-					<li><a href="#">Доп. услуги</a></li>
-					<li><a href="#">О нас</a></li>							
-				</ul>
+			<div class="top-phone">
+				<span>Тел.: +7 (495) 122-00-02</span>
 			</div>
-		</div>
-	</div>
-</body>
-</html>
+			<div class="top-adress">
+				<span>23 км. по Новорижскому шоссе</span>
+			</div>
+			<div class="top-ord-call">
+				<a href="#">Заказать обратный звонок</a>
+			</div>
+			<div class="write-to-chool">
+				<button>Записаться в школу</button>
+			</div>
+		</div><!--top-->
+		<div class="top-banner">
+			<ul>
+				<li>
+					<img src="img/top-banner1.jpg" alt="">
+					<div class="top-banner-text">
+						<p><span>МЕЖДУНАРОДНАЯ НАЧАЛЬНАЯ
+							ШКОЛА WUNDERPARK –</span>
+						</p>
+						<p>БЕСЧИСЛЕННЫЕ ВОЗМОЖНОСТИ
+							ДЛЯ РАЗВИТИЯ
+						</p>
+					</div>					
+				</li>
+			</ul>		
+		</div><!--top-banner-->
+		<div class="about">
+			<h2>WUNDERPARK – МЕЖДУНАРОДНАЯ ЧАСТНАЯ НАЧАЛЬНАЯ ШКОЛА</h2>
+			<p>Недалеко от Москвы, в живописном, экологически чистом районе на 23 километре от МКАД по Новорижскому шоссе находится частная начальная школа Wunderpark. Wunderpark — это не просто учебное заведение, это уникальная среда для обучения и развития детей по двум программам обучения: России и Великобритании.</p>
+			<p> Не упустите возможность дать своим детям классическое образование в лучших традициях частных школ Великобритании!
+				Международную начальную школу Wunderpark основали молодые родители, заботящиеся о будущем своих детей. Им хотелось создать комфортную среду, которая бы способствовала развитию способностей школьников и обеспечивала здоровый образ жизни. Особые методики преподавания позволяют педагогам – а среди них только специалисты высокого класса из России и Великобритании – найти к каждому ребенку индивидуальный подход.
+				Интерес к изучению различных дисциплин у школьников поддерживается путём использования интерактивных учебных пособий и современных методик преподавания. При составлении расписания занятий учитываются физические и интеллектуальные способности учащихся, разрабатываются персональные задания дополнительного образования для детей.</p>
+			</div><!--about-->
+		</div><!--wrapper-->
+	</body>
+	</html>
