--- a/app/index.html
+++ b/app/index.html
@@ -26,12 +26,16 @@
 				</div>
 				<div class="top_mnu main-mnu">
 					<ul>
-						<li class="active"><a href="#">Санкт-Петербург</a></li>
-						<li><a href="#">Екатеринбург</a></li>
-						<li><a href="#">Зарубежные туры</a></li>
-						<li><a href="#">Российские туры</a></li>
-						<li><a href="#">Доп. услуги</a></li>
-						<li><a href="#">О нас</a></li>							
+						<li><a href="#">О школе</a></li>
+						<li><a href="#">Наши педагоги</a></li>
+						<li><a href="#">Программа обучения</a></li>
+						<li><a href="#">Условия приема</a></li>
+						<li><a href="#">Питание</a></li>
+						<li><a href="#">Питание</a></li>
+						<li><a href="#">Школьная форма</a></li>
+						<li><a href="#">Документы</a></li>
+						<li><a href="#">Стоимость обучения</a></li>
+						<li><a href="#">Отзывы</a></li>
 					</ul>
 				</div>
 			</div>
@@ -64,12 +68,23 @@
 			</ul>		
 		</div><!--top-banner-->
 		<div class="about">
-			<h2>WUNDERPARK – МЕЖДУНАРОДНАЯ ЧАСТНАЯ НАЧАЛЬНАЯ ШКОЛА</h2>
-			<p>Недалеко от Москвы, в живописном, экологически чистом районе на 23 километре от МКАД по Новорижскому шоссе находится частная начальная школа Wunderpark. Wunderpark — это не просто учебное заведение, это уникальная среда для обучения и развития детей по двум программам обучения: России и Великобритании.</p>
-			<p> Не упустите возможность дать своим детям классическое образование в лучших традициях частных школ Великобритании!
-				Международную начальную школу Wunderpark основали молодые родители, заботящиеся о будущем своих детей. Им хотелось создать комфортную среду, которая бы способствовала развитию способностей школьников и обеспечивала здоровый образ жизни. Особые методики преподавания позволяют педагогам – а среди них только специалисты высокого класса из России и Великобритании – найти к каждому ребенку индивидуальный подход.
-				Интерес к изучению различных дисциплин у школьников поддерживается путём использования интерактивных учебных пособий и современных методик преподавания. При составлении расписания занятий учитываются физические и интеллектуальные способности учащихся, разрабатываются персональные задания дополнительного образования для детей.</p>
-			</div><!--about-->
-		</div><!--wrapper-->
-	</body>
-	</html>
+			<div class="about-text">
+				<h2>WUNDERPARK – МЕЖДУНАРОДНАЯ ЧАСТНАЯ НАЧАЛЬНАЯ ШКОЛА</h2>
+				<p>Недалеко от Москвы, в живописном, экологически чистом районе на 23 километре от МКАД по Новорижскому шоссе находится частная начальная школа Wunderpark. Wunderpark — это не просто учебное заведение, это уникальная среда для обучения и развития детей по двум программам обучения: России и Великобритании.
+				</p>
+				<p> Не упустите возможность дать своим детям классическое образование в лучших традициях частных школ Великобритании!
+					Международную начальную школу Wunderpark основали молодые родители, заботящиеся о будущем своих детей. Им хотелось создать комфортную среду, которая бы способствовала развитию способностей школьников и обеспечивала здоровый образ жизни. Особые методики преподавания позволяют педагогам – а среди них только специалисты высокого класса из России и Великобритании – найти к каждому ребенку индивидуальный подход.
+					Интерес к изучению различных дисциплин у школьников поддерживается путём использования интерактивных учебных пособий и современных методик преподавания. При составлении расписания занятий учитываются физические и интеллектуальные способности учащихся, разрабатываются персональные задания дополнительного образования для детей.
+				</p>
+				<p>Недалеко от Москвы, в живописном, экологически чистом районе на 23 километре от МКАД по Новорижскому шоссе находится частная начальная школа Wunderpark. Wunderpark — это не просто учебное заведение, это уникальная среда для обучения и развития детей по двум программам обучения: России и Великобритании.
+				</p>
+				<p> Не упустите возможность дать своим детям классическое образование в лучших традициях частных школ Великобритании!
+					Международную начальную школу Wunderpark основали молодые родители, заботящиеся о будущем своих детей. Им хотелось создать комфортную среду, которая бы способствовала развитию способностей школьников и обеспечивала здоровый образ жизни. Особые методики преподавания позволяют педагогам – а среди них только специалисты высокого класса из России и Великобритании – найти к каждому ребенку индивидуальный подход.
+					Интерес к изучению различных дисциплин у школьников поддерживается путём использования интерактивных учебных пособий и современных методик преподавания. При составлении расписания занятий учитываются физические и интеллектуальные способности учащихся, разрабатываются персональные задания дополнительного образования для детей.
+				</p>
+			</div><!--about-text-->
+			<button class="about-text-read-more">читать дальше...</button>
+		</div><!--about-->
+	</div><!--wrapper-->
+</body>
+</html>
