--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
 				</div>
 				<div class="top_mnu main-mnu">
 					<ul>
-						<li><a href="#">О школе</a></li>
+						<li class="active"><a href="#">О школе</a></li>
 						<li><a href="#">Наши педагоги</a></li>
 						<li><a href="#">Программа обучения</a></li>
 						<li><a href="#">Условия приема</a></li>
@@ -85,6 +85,53 @@
 			</div><!--about-text-->
 			<button class="about-text-read-more">читать дальше...</button>
 		</div><!--about-->
+		<div class="programm">
+			<h2>Две образовательные программы:</h2>
+			<div class="programm-content">
+				<div class="gb-ru">
+					<div class="gb">
+						<img src="img/cart-gb.png" alt="">
+						<span>
+							Британская 
+							национальная
+							программа 
+							«National Curriculum
+							in England»
+						</span>
+					</div>
+					<div class="plus">
+						<span>+</span>
+					</div>
+					<div class="ru">
+						<img src="img/cart-ru.png" alt="">
+						<span>
+							Российская 
+							образовательная
+							программа 
+							«Начальная 
+							школа XXI века»
+						</span>
+					</div>
+				</div>
+				<div><span>=</span></div>
+				<div>
+					<div><img src="img/logo2.png" alt=""></div>
+					<div>
+						<ul>							
+							<li>Международное образование </li>
+							<li>подтверждено сертификатами </li>
+							<li>(экзамены KET/PET/SAT)</li>
+							<li>Ежегодные тесты по российской </li>
+							<li>образовательной программе</li>
+							<li>Олимпиады</li>
+							<li>Конкурсы</li>
+							<li>Рекомендации в международные </li>
+							<li>школы</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div><!--programm-->
 	</div><!--wrapper-->
 </body>
 </html>
