--- a/app/index.html
+++ b/app/index.html
@@ -92,10 +92,10 @@
 					<div class="gb">
 						<img src="img/cart-gb.png" alt="">
 						<span>
-							Британская 
-							национальная
-							программа 
-							«National Curriculum
+							Британская <br>
+							национальная<br>
+							программа <br>
+							«National Curriculum<br>
 							in England»
 						</span>
 					</div>
@@ -105,33 +105,45 @@
 					<div class="ru">
 						<img src="img/cart-ru.png" alt="">
 						<span>
-							Российская 
-							образовательная
-							программа 
-							«Начальная 
+							Российская <br>
+							образовательная<br>
+							программа <br>
+							«Начальная <br>
 							школа XXI века»
 						</span>
 					</div>
 				</div>
-				<div><span>=</span></div>
-				<div>
+				<div class="equally">
+					<span>=</span>
+				</div>
+				<div class="logo2-list">
 					<div><img src="img/logo2.png" alt=""></div>
 					<div>
 						<ul>							
-							<li>Международное образование </li>
-							<li>подтверждено сертификатами </li>
-							<li>(экзамены KET/PET/SAT)</li>
-							<li>Ежегодные тесты по российской </li>
-							<li>образовательной программе</li>
+							<li>Международное образование	подтверждено сертификатами(экзамены KET/PET/SAT)</li>
+							<li>Ежегодные тесты по российской образовательной программе</li>
 							<li>Олимпиады</li>
 							<li>Конкурсы</li>
-							<li>Рекомендации в международные </li>
-							<li>школы</li>
+							<li>Рекомендации в международные школы</li>
 						</ul>
 					</div>
 				</div>
 			</div>
 		</div><!--programm-->
+		<div class="educators">		
+			<div class="outer">
+				<div class="inner">
+					<div class="educators-text">Выберите программу обучения дляbr вашего ребенка от 3 до 11 лет</div>
+					<form>							
+						<label for="Age">Введите возраст Вашего ребенка:</label>
+						<div class="educators-controls">
+							<input id="Age" name="age" value="0" type="text">
+							<button type="submit">Подобрать</button>
+						</div>
+					</form>
+				</div>
+			</div>			
+		</div><!--educators-->
 	</div><!--wrapper-->
 </body>
 </html>
