--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">	
-	<title>Главная</title>	
+	<title>Главная</title>		
 	<link rel="stylesheet" href="css/main.css">	
 	<script src="js/jquery-1.12.0.min.js"></script>
 	<script src="js/common.js"></script>
@@ -150,8 +150,8 @@
 							<img src="img/slider11.jpg" alt="">
 						</div>
 						<div class="slider1-text">
-							<span>Виктория Руденко</span><br>
-							Директор школы
+							<span>Кевин Ринта</span>
+							<div class="dol">Директор школы</div>							
 						</div>
 					</li>
 					<li>
@@ -159,12 +159,13 @@
 							<img src="img/slider12.jpg" alt="">
 						</div>
 						<div class="slider1-text">
-							<span>Кевин Ринта</span> <br>
-							Педагог по международной <br>
-							программе
+							<span>Виктория Руденко</span>
+							<div class="dol">Педагог по международной
+								программе
+							</div>
 						</div>
 					</li>
-				</ul>
+				</ul>				
 			</div><!--slider1-->
 		</div>
 	</div><!--educators-->
