--- a/app/index.html
+++ b/app/index.html
@@ -150,7 +150,7 @@
 							<img src="img/slider11.jpg" alt="">
 						</div>
 						<div class="slider1-text">
-							<span>Кевин Ринта</span>
+							<span>Виктория Руденко</span>
 							<div class="dol">Директор школы</div>							
 						</div>
 					</li>
@@ -159,14 +159,104 @@
 							<img src="img/slider12.jpg" alt="">
 						</div>
 						<div class="slider1-text">
-							<span>Виктория Руденко</span>
+							<span>Кевин Ринта</span>
 							<div class="dol">Педагог по международной
 								программе
 							</div>
 						</div>
 					</li>
 				</ul>				
-			</div><!--slider1-->
+			</div><!--slider1-->			
+			<div class="dop-obr">
+				<h2>Дополнительное образование</h2>
+				<div class="slider1 slider2">
+					<ul>
+						<li>
+							<div class="outer-img">
+								<div class="slider1-img">
+									<img src="img/slider21.jpg" alt="">
+								</div>
+							</div>
+							<div class="slider1-text">								
+								<div class="dol">Группа продленного дня</div>							
+							</div>
+						</li>
+						<li>
+							<div class="outer-img">
+								<div class="slider1-img">
+									<img src="img/slider22.jpg" alt="">
+								</div>
+							</div>
+							<div class="slider1-text">								
+								<div class="dol">Балет</div>
+							</div>
+						</li>
+					</ul>				
+				</div>
+			</div><!--dop-obr-->
+			<div class="about dreams">
+				<div class="dreams-text">
+					<h2>МЕЖДУНАРОДНАЯ ЧАСТНАЯ НАЧАЛЬНАЯ ШКОЛА WUNDERPARK – МЕСТО, <br> ГДЕ ВОПЛОЩАЮТСЯ ДЕТСКИЕ МЕЧТЫ</h2>
+					<p>По легенде, в главном замке платной школы Wunderpark есть тайная комната, где спрятана волшебная палочка. Достаточно взмахнуть ею и самые заветные желания будут исполнены. Не верите? Тогда как же объяснить то, что любой малыш, посетив Семейный центр дополнительного образования для детей Wunderpark, за короткий срок сможет почувствовать себя и врачом, и шеф-поваром, и детективом? Потрясающий панорамный экран 3D театра позволит ребятам почувствовать себя в виртуальном пространстве, а контактный зоопарк – пообщаться с ручными животными.</p>
+				</div>
+				<div class="dreams-blocks">
+					<ul>
+						<li>
+							<a href="#">
+								<img src="img/blocks1.png" alt="">
+								<span class="dreams-name">
+									ИНТЕРАКТИВНЫЙ
+									ГОРОД ПРОФЕССИЙ
+									WUNDERCITY
+								</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="img/blocks2.png" alt="">
+								<span class="dreams-name">
+									Детская научно– <br>
+									исследовательская <br>
+									лаборатория
+								</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="img/blocks3.png" alt="">
+								<span class="dreams-name">
+									3d театр
+								</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="img/blocks4.png" alt="">
+								<span class="dreams-name">
+									игропарк
+								</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="img/blocks5.png" alt="">
+								<span class="dreams-name">
+									контактный <br>
+									зоопарк
+								</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="img/blocks6.png" alt="">
+								<span class="dreams-name">
+									стадион
+								</span>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div><!--dreams-->
 		</div>
 	</div><!--educators-->
 </div><!--wrapper-->
