--- a/app/index.html
+++ b/app/index.html
@@ -8,165 +8,167 @@
 	<script src="js/common.js"></script>
 </head>
 <body>
-	<div class="wrapper">		
-		<div class="top">
-			<div class="col-mnu nopadding">
-				<a href="" class="logo"><img src="img/logo.png" alt=""></a>
-				<div class="toggle-mnu-wrap">
-					<a href="#" class="toggle-mnu"><span></span></a>
-				</div>
-				<div class="top_mnu main-mnu">
-					<ul>
-						<li class="active"><a href="#">О школе</a></li>
-						<li><a href="#">Наши педагоги</a></li>
-						<li><a href="#">Программа обучения</a></li>
-						<li><a href="#">Условия приема</a></li>
-						<li><a href="#">Питание</a></li>
-						<li><a href="#">Питание</a></li>
-						<li><a href="#">Школьная форма</a></li>
-						<li><a href="#">Документы</a></li>
-						<li><a href="#">Стоимость обучения</a></li>
-						<li><a href="#">Отзывы</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="top-phone">
-				<span>Тел.: +7 (495) 122-00-02</span>
-			</div>
-			<div class="top-adress">
-				<span>23 км. по Новорижскому шоссе</span>
-			</div>
-			<div class="top-ord-call">
-				<a href="#">Заказать обратный звонок</a>
-			</div>
-			<div class="write-to-chool">
-				<button>Записаться в школу</button>
-			</div>
-		</div><!--top-->
-		<div class="top-banner">
-			<ul>
-				<li>
-					<img src="img/top-banner1.jpg" alt="">
-					<div class="top-banner-text">
-						<p><span>МЕЖДУНАРОДНАЯ НАЧАЛЬНАЯ
-							ШКОЛА WUNDERPARK –</span>
-						</p>
-						<p>БЕСЧИСЛЕННЫЕ ВОЗМОЖНОСТИ
-							ДЛЯ РАЗВИТИЯ
-						</p>
-					</div>					
-				</li>
-			</ul>		
-		</div><!--top-banner-->
-		<div class="about">
-			<div class="about-text">
-				<h2>WUNDERPARK – МЕЖДУНАРОДНАЯ ЧАСТНАЯ НАЧАЛЬНАЯ ШКОЛА</h2>
-				<p>Недалеко от Москвы, в живописном, экологически чистом районе на 23 километре от МКАД по Новорижскому шоссе находится частная начальная школа Wunderpark. Wunderpark — это не просто учебное заведение, это уникальная среда для обучения и развития детей по двум программам обучения: России и Великобритании.
-				</p>
-				<p> Не упустите возможность дать своим детям классическое образование в лучших традициях частных школ Великобритании!
-					Международную начальную школу Wunderpark основали молодые родители, заботящиеся о будущем своих детей. Им хотелось создать комфортную среду, которая бы способствовала развитию способностей школьников и обеспечивала здоровый образ жизни. Особые методики преподавания позволяют педагогам – а среди них только специалисты высокого класса из России и Великобритании – найти к каждому ребенку индивидуальный подход.
-					Интерес к изучению различных дисциплин у школьников поддерживается путём использования интерактивных учебных пособий и современных методик преподавания. При составлении расписания занятий учитываются физические и интеллектуальные способности учащихся, разрабатываются персональные задания дополнительного образования для детей.
-				</p>
-				<p>Недалеко от Москвы, в живописном, экологически чистом районе на 23 километре от МКАД по Новорижскому шоссе находится частная начальная школа Wunderpark. Wunderpark — это не просто учебное заведение, это уникальная среда для обучения и развития детей по двум программам обучения: России и Великобритании.
-				</p>
-				<p> Не упустите возможность дать своим детям классическое образование в лучших традициях частных школ Великобритании!
-					Международную начальную школу Wunderpark основали молодые родители, заботящиеся о будущем своих детей. Им хотелось создать комфортную среду, которая бы способствовала развитию способностей школьников и обеспечивала здоровый образ жизни. Особые методики преподавания позволяют педагогам – а среди них только специалисты высокого класса из России и Великобритании – найти к каждому ребенку индивидуальный подход.
-					Интерес к изучению различных дисциплин у школьников поддерживается путём использования интерактивных учебных пособий и современных методик преподавания. При составлении расписания занятий учитываются физические и интеллектуальные способности учащихся, разрабатываются персональные задания дополнительного образования для детей.
-				</p>
-			</div><!--about-text-->
-			<button class="about-text-read-more">читать дальше...</button>
-		</div><!--about-->
-		<div class="programm">
-			<h2>Две образовательные программы:</h2>
-			<div class="programm-content">
-				<div class="gb-ru">
-					<div class="gb">
-						<img src="img/cart-gb.png" alt="">
-						<span>
-							Британская <br>
-							национальная<br>
-							программа <br>
-							«National Curriculum<br>
-							in England»
-						</span>
+	<div class="wrapper">	
+		<div class="mobile-content">
+			<div class="top">
+				<div class="col-mnu nopadding">
+					<a href="" class="logo"><img src="img/logo.png" alt=""></a>
+					<div class="toggle-mnu-wrap">
+						<a href="#" class="toggle-mnu"><span></span></a>
 					</div>
-					<div class="plus">
-						<span>+</span>
-					</div>
-					<div class="ru">
-						<img src="img/cart-ru.png" alt="">
-						<span>
-							Российская <br>
-							образовательная<br>
-							программа <br>
-							«Начальная <br>
-							школа XXI века»
-						</span>
-					</div>
-				</div>
-				<div class="equally">
-					<span>=</span>
-				</div>
-				<div class="logo2-list">
-					<div><img src="img/logo2.png" alt=""></div>
-					<div>
-						<ul>							
-							<li>Международное образование	подтверждено сертификатами(экзамены KET/PET/SAT)</li>
-							<li>Ежегодные тесты по российской образовательной программе</li>
-							<li>Олимпиады</li>
-							<li>Конкурсы</li>
-							<li>Рекомендации в международные школы</li>
+					<div class="top_mnu main-mnu">
+						<ul>
+							<li class="active"><a href="#">О школе</a></li>
+							<li><a href="#">Наши педагоги</a></li>
+							<li><a href="#">Программа обучения</a></li>
+							<li><a href="#">Условия приема</a></li>
+							<li><a href="#">Питание</a></li>
+							<li><a href="#">Питание</a></li>
+							<li><a href="#">Школьная форма</a></li>
+							<li><a href="#">Документы</a></li>
+							<li><a href="#">Стоимость обучения</a></li>
+							<li><a href="#">Отзывы</a></li>
 						</ul>
 					</div>
 				</div>
-			</div>
-		</div><!--programm-->
-		<div class="educators">		
-			<div class="outer">
-				<div class="inner">
-					<div class="educators-text">Выберите программу обучения для<br> вашего ребенка от 3 до 11 лет</div>
-					<form>							
-						<label for="Age">Введите возраст <br>Вашего ребенка:</label>
-						<div class="educators-controls">
-							<input id="Age" name="age"  type="text">
-							<button type="submit">подобрать</button>
-						</div>
-					</form>
+				<div class="top-phone">
+					<span>Тел.: +7 (495) 122-00-02</span>
 				</div>
-			</div><!--outher-->			
-			<div class="our-eductors">
-				<h2>Наши педагоги</h2>
-				<div class="all-quest">
-					<ul>
-						<li><a class="eductors-all" href="#">все педагоги</a></li>
-						<li><a class="eductors-quest" href="#">задать вопрос?</a></li>
-					</ul>
-				</div>	
-			</div><!--our-eductors-->
-			<div class="slider1">
+				<div class="top-adress">
+					<span>23 км. по Новорижскому шоссе</span>
+				</div>
+				<div class="top-ord-call">
+					<a href="#">Заказать обратный звонок</a>
+				</div>
+				<div class="write-to-chool">
+					<button>Записаться в школу</button>
+				</div>
+			</div><!--top-->
+			<div class="top-banner">
 				<ul>
 					<li>
-						<div class="slider1-img">
-							<img src="img/slider11.jpg" alt="">
-						</div>
-						<div class="slider1-text">
-							<span>Виктория Руденко</span>
-							<div class="dol">Директор школы</div>							
-						</div>
+						<img src="img/top-banner1.jpg" alt="">
+						<div class="top-banner-text">
+							<p><span>МЕЖДУНАРОДНАЯ НАЧАЛЬНАЯ
+								ШКОЛА WUNDERPARK –</span>
+							</p>
+							<p>БЕСЧИСЛЕННЫЕ ВОЗМОЖНОСТИ
+								ДЛЯ РАЗВИТИЯ
+							</p>
+						</div>					
 					</li>
-					<li>
-						<div class="slider1-img">
-							<img src="img/slider12.jpg" alt="">
+				</ul>		
+			</div><!--top-banner-->
+			<div class="about">
+				<div class="about-text">
+					<h2>WUNDERPARK – МЕЖДУНАРОДНАЯ ЧАСТНАЯ НАЧАЛЬНАЯ ШКОЛА</h2>
+					<p>Недалеко от Москвы, в живописном, экологически чистом районе на 23 километре от МКАД по Новорижскому шоссе находится частная начальная школа Wunderpark. Wunderpark — это не просто учебное заведение, это уникальная среда для обучения и развития детей по двум программам обучения: России и Великобритании.
+					</p>
+					<p> Не упустите возможность дать своим детям классическое образование в лучших традициях частных школ Великобритании!
+						Международную начальную школу Wunderpark основали молодые родители, заботящиеся о будущем своих детей. Им хотелось создать комфортную среду, которая бы способствовала развитию способностей школьников и обеспечивала здоровый образ жизни. Особые методики преподавания позволяют педагогам – а среди них только специалисты высокого класса из России и Великобритании – найти к каждому ребенку индивидуальный подход.
+						Интерес к изучению различных дисциплин у школьников поддерживается путём использования интерактивных учебных пособий и современных методик преподавания. При составлении расписания занятий учитываются физические и интеллектуальные способности учащихся, разрабатываются персональные задания дополнительного образования для детей.
+					</p>
+					<p>Недалеко от Москвы, в живописном, экологически чистом районе на 23 километре от МКАД по Новорижскому шоссе находится частная начальная школа Wunderpark. Wunderpark — это не просто учебное заведение, это уникальная среда для обучения и развития детей по двум программам обучения: России и Великобритании.
+					</p>
+					<p> Не упустите возможность дать своим детям классическое образование в лучших традициях частных школ Великобритании!
+						Международную начальную школу Wunderpark основали молодые родители, заботящиеся о будущем своих детей. Им хотелось создать комфортную среду, которая бы способствовала развитию способностей школьников и обеспечивала здоровый образ жизни. Особые методики преподавания позволяют педагогам – а среди них только специалисты высокого класса из России и Великобритании – найти к каждому ребенку индивидуальный подход.
+						Интерес к изучению различных дисциплин у школьников поддерживается путём использования интерактивных учебных пособий и современных методик преподавания. При составлении расписания занятий учитываются физические и интеллектуальные способности учащихся, разрабатываются персональные задания дополнительного образования для детей.
+					</p>
+				</div><!--about-text-->
+				<button class="about-text-read-more">читать дальше...</button>
+			</div><!--about-->
+			<div class="programm">
+				<h2>Две образовательные программы:</h2>
+				<div class="programm-content">
+					<div class="gb-ru">
+						<div class="gb">
+							<img src="img/cart-gb.png" alt="">
+							<span>
+								Британская <br>
+								национальная<br>
+								программа <br>
+								«National Curriculum<br>
+								in England»
+							</span>
 						</div>
-						<div class="slider1-text">
-							<span>Кевин Ринта</span>
-							<div class="dol">Педагог по международной
-								программе
+						<div class="plus">
+							<span>+</span>
+						</div>
+						<div class="ru">
+							<img src="img/cart-ru.png" alt="">
+							<span>
+								Российская <br>
+								образовательная<br>
+								программа <br>
+								«Начальная <br>
+								школа XXI века»
+							</span>
+						</div>
+					</div>
+					<div class="equally">
+						<span>=</span>
+					</div>
+					<div class="logo2-list">
+						<div><img src="img/logo2.png" alt=""></div>
+						<div>
+							<ul>							
+								<li>Международное образование	подтверждено сертификатами(экзамены KET/PET/SAT)</li>
+								<li>Ежегодные тесты по российской образовательной программе</li>
+								<li>Олимпиады</li>
+								<li>Конкурсы</li>
+								<li>Рекомендации в международные школы</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div><!--programm-->
+			<div class="educators">		
+				<div class="outer">
+					<div class="inner">
+						<div class="educators-text">Выберите программу обучения для<br> вашего ребенка от 3 до 11 лет</div>
+						<form>							
+							<label for="Age">Введите возраст <br>Вашего ребенка:</label>
+							<div class="educators-controls">
+								<input id="Age" name="age"  type="text">
+								<button type="submit">подобрать</button>
 							</div>
-						</div>
-					</li>
-				</ul>				
-			</div><!--slider1-->			
+						</form>
+					</div>
+				</div><!--outher-->			
+				<div class="our-eductors">
+					<h2>Наши педагоги</h2>
+					<div class="all-quest">
+						<ul>
+							<li><a class="eductors-all" href="#">все педагоги</a></li>
+							<li><a class="eductors-quest" href="#">задать вопрос?</a></li>
+						</ul>
+					</div>	
+				</div><!--our-eductors-->
+				<div class="slider1">
+					<ul>
+						<li>
+							<div class="slider1-img">
+								<img src="img/slider11.jpg" alt="">
+							</div>
+							<div class="slider1-text">
+								<span>Виктория Руденко</span>
+								<div class="dol">Директор школы</div>							
+							</div>
+						</li>
+						<li>
+							<div class="slider1-img">
+								<img src="img/slider12.jpg" alt="">
+							</div>
+							<div class="slider1-text">
+								<span>Кевин Ринта</span>
+								<div class="dol">Педагог по международной
+									программе
+								</div>
+							</div>
+						</li>
+					</ul>				
+				</div><!--slider1-->	
+			</div><!--educators-->		
 			<div class="dop-obr">
 				<h2>Дополнительное образование</h2>
 				<div class="slider1 slider2">
@@ -257,8 +259,29 @@
 					</ul>
 				</div>
 			</div><!--dreams-->
+			<div class="events">	
+				<h2>События</h2>	
+				<ul>
+					<li>
+						<div class="events-img">
+							<a href="#">
+								<img src="img/events1.jpg" alt="">
+							</a>
+							<span class="events-date">14.10.2016</span>
+						</div>
+						<div class="events-text">
+							<a class="events-title" href="#">ПЕРВОЕ СЕНТЯБРЯ В МЕЖДУНАРОДНОЙ ШКОЛЕ WUNDERPARK</a>
+							<div>
+								<p>Наступил новый 2016-2017 учебный год! 
+									Этот год в Wunderpark пройдет под девизом 
+									«Летим к планете Знаний».
+								</p>
+							</div>
+						</div>
+					</li>
+				</ul>	
+			</div><!--events-->
 		</div>
-	</div><!--educators-->
-</div><!--wrapper-->
+	</div><!--wrapper-->
 </body>
 </html>
