--- a/app/index.html
+++ b/app/index.html
@@ -270,8 +270,8 @@
 							<span class="events-date">14.10.2016</span>
 						</div>
 						<div class="events-text">
-							<a class="events-title" href="#">ПЕРВОЕ СЕНТЯБРЯ В МЕЖДУНАРОДНОЙ ШКОЛЕ WUNDERPARK</a>
-							<div>
+							<a class="events-title" href="#">ПЕРВОЕ СЕНТЯБРЯ В ШКОЛЕ WUNDERPARK</a>
+							<div class="events-desc">
 								<p>Наступил новый 2016-2017 учебный год! 
 									Этот год в Wunderpark пройдет под девизом 
 									«Летим к планете Знаний».
@@ -279,9 +279,69 @@
 							</div>
 						</div>
 					</li>
+					<li>
+						<div class="events-img">
+							<a href="#">
+								<img src="img/events1.jpg" alt="">
+							</a>
+							<span class="events-date">14.10.2016</span>
+						</div>
+						<div class="events-text">
+							<a class="events-title" href="#">ПЕРВОЕ СЕНТЯБРЯ В ШКОЛЕ WUNDERPARK</a>
+							<div class="events-desc">
+								<p>Наступил новый 2016-2017 учебный год! 
+									Этот год в Wunderpark пройдет под девизом 
+									«Летим к планете Знаний».
+								</p>
+							</div>
+						</div>
+					</li>					
 				</ul>	
 			</div><!--events-->
-		</div>
+			<div class="outher-reviews">
+				<div class="reviews">
+					<h2>Отзывы</h2>
+					<ul>
+						<li>
+							<div class="reviews-img">						
+								<img src="img/rewiews1.png" alt="">														
+							</div>
+							<div class="reviews-text">
+								<h3 class="reviews-title">Ирина</h3>
+								<div class="reviews-desc">
+									<p>Даже не думала найти в нашей стране такое 
+										идеальное сочетание разных подходов к образованию: 
+										классические российские методики и британской 
+										национальной программы. Педагоги …
+									</p>
+								</div>
+								<span class="reviews-date">14.10.2016</span>
+							</div>
+						</li>
+						<li>
+							<div class="reviews-img">						
+								<img src="img/rewiews1.png" alt="">														
+							</div>
+							<div class="reviews-text">
+								<h3 class="reviews-title">Анастасия</h3>
+								<div class="reviews-desc">
+									<p>Даже не думала найти в нашей стране такое 
+										идеальное сочетание разных подходов к образованию: 
+										классические российские методики и британской 
+										национальной программы. Педагоги …
+									</p>
+								</div>
+								<span class="reviews-date">14.10.2016</span>
+							</div>
+						</li>
+					</ul>				
+				</div><!--reviews-->
+				<a href="#" class="view-other"><span>Показать другие</span></a>
+			</div><!--outher-reviews-->
+			<div class="projects">
+				<h2>Наши проекты</h2>
+			</div><!--projects-->
+		</div><!--mobile-content-->
 	</div><!--wrapper-->
 </body>
 </html>
