--- a/app/index.html
+++ b/app/index.html
@@ -340,6 +340,44 @@
 			</div><!--outher-reviews-->
 			<div class="projects">
 				<h2>Наши проекты</h2>
+				<ul>
+					<li>
+						<a href="#">							
+							<img src="img/proj1.jpg" alt="">
+							<span class="proj-title">
+								<span>Семейный</span>
+								<span>центр</span>
+							</span>
+							<span class="proj-desc">
+								<p>Уникальный <br>
+									образовательный проект <br>
+									для всей семьи: <br>
+									Чудесный город профессий, <br>
+									3D театр, игропарк, <br>
+									сад-звуков, сад фактур...
+								</p>
+							</span>
+						</a>
+					</li>
+					<li>
+						<a href="#">							
+							<img src="img/proj2.jpg" alt="">
+							<span class="proj-title">
+								<span>Детская</span>
+								<span>студия</span>
+							</span>
+							<span class="proj-desc">
+								<p>Уникальный <br>
+									образовательный проект <br>
+									для всей семьи: <br>
+									Чудесный город профессий, <br>
+									3D театр, игропарк, <br>
+									сад-звуков, сад фактур...
+								</p>
+							</span>
+						</a>
+					</li>
+				</ul>
 			</div><!--projects-->
 		</div><!--mobile-content-->
 	</div><!--wrapper-->
